# duna2

./: .gitignore  README.md  build.gradle  gradlew  gradlew.bat  settings.gradle
.github/workflows/: build.yml  opy_headers.ym
app/: build.gradle  my-release-key.jks  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: DuneII_-_The_Battle_For_Arrakis_Full_Version_(R82c)_480x464_[T+Rus_wip].gen  dune2.gen
app/src/main/cpp/: CMakeLists.txt  dummy_genesis.c  emulator-bridge.cpp  flac_fixes.h  genesis-core.cpp  genesis-core.hpp
app/src/main/cpp/genesis-plus-gx/core/: config.h  osd.h
app/src/main/cpp/genesis-plus-gx/libretro/: libretro.c
app/src/main/java/com/dune2emu/: EmulatorActivity.kt  EmulatorCore.kt  GamepadView.kt  MainMenuActivity.kt  MultiplayerActivity.kt  RetroBridge.java
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
